--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "fast-glob": "^3.2.7",
     "fs-extra": "^10.0.0",
     "js-yaml": "^4.1.0",
-    "lz-string": "^1.4.4"
+    "lz-string": "^1.4.4",
+    "ts-node": "^10.9.1"
   },
   "eslintConfig": {
     "extends": "@antfu/eslint-config-ts",
     "rules": {
       "import/first": "off",
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": "off",
+      "no-use-before-define": "off"
     }
   }
 }
