--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       "import/first": "off",
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": "off",
-      "no-use-before-define": "off"
+      "no-use-before-define": "off",
+      "no-alert": "off"
     }
   }
 }
